Organización de clases y borrado de cosas innecesarias

--- a/aplicacion/app/src/main/res/layout/activity_main.xml
+++ b/aplicacion/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context="org.altbeacon.activity.MainActivity">
 
     <TextView
         android:id="@+id/beaconCount"
