--- a/aplicacion/app/src/main/res/layout/activity_main.xml
+++ b/aplicacion/app/src/main/res/layout/activity_main.xml
@@ -3,45 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
     android:orientation="vertical"
     tools:context="org.altbeacon.activity.MainActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
     <TextView
-        android:id="@+id/beaconCount"
+        android:id="@+id/normalTextView"
+        style="@style/MyNormalTextStyle"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="0 visible beacons:"
-        android:textAlignment="center" />
+        android:layout_height="113dp"
+        android:layout_marginTop="200dp"
+        android:gravity="center"
+        android:text="Para probar las funcionalidades usar las opciones del menú superior" />
 
-    <ListView
-        android:id="@+id/beaconList"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"></ListView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/rangingButton"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:onClick="rangingButtonTapped"
-            android:text="Disable Ranging"></Button>
-
-        <Button
-            android:id="@+id/monitoringButton"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:onClick="monitoringButtonTapped"
-            android:text="Disable Monitoring"></Button>
-
-    </LinearLayout>
 
 </LinearLayout>
