--- a/aplicacion/app/src/main/res/layout/activity_personas_actual_letra_fecha.xml
+++ b/aplicacion/app/src/main/res/layout/activity_personas_actual_letra_fecha.xml
@@ -59,10 +59,10 @@
         android:layout_marginBottom="5dp"
         android:background="@drawable/text_view_border"
         android:clickable="true"
-        android:drawableStart="@drawable/ic_datetime"
         android:focusable="true"
         android:hint="  Fecha y hora"
         android:padding="10dp"
+        app:drawableStartCompat="@drawable/ic_datetime"
         app:layout_constraintBottom_toTopOf="@+id/buscarButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
