Cambio de nombre registrarse a registro y funcionalidad para pulsar en barar de navegación y volver a main

--- a/aplicacion/app/src/main/res/menu/toolbar_menu.xml
+++ b/aplicacion/app/src/main/res/menu/toolbar_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/registerMenu"
         android:icon="@drawable/ic_register"
-        android:title="Registrarse"
+        android:title="Registro"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/loginMenu"
