--- a/aplicacion/app/src/main/res/layout/activity_main.xml
+++ b/aplicacion/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginRight="12dp"
-        android:text="Registrarse" />
+        android:text="Registro" />
 
     <Button
         android:id="@+id/loginButton"
