--- a/aplicacion/app/src/main/res/layout/activity_entradas_letra_fecha.xml
+++ b/aplicacion/app/src/main/res/layout/activity_entradas_letra_fecha.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Entradas"
+        android:text="Entradas histórico"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
