--- a/aplicacion/app/src/main/res/layout/activity_personas_actual_letra.xml
+++ b/aplicacion/app/src/main/res/layout/activity_personas_actual_letra.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Personas actual"
+        android:text="Ocupación actual"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
